# EutherOxide

./: .gitignore  Cargo.toml  HOST_MULTIPLAYER_PLAN.md  HOST_SECURITY_PLAN.md  README.md  SERVER_RUNBOOK.md  TOAGENT.md  en.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/eutherbooks-player/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/eutherbooks-player/scripts/: write-version.mjs
apps/eutherbooks-player/src/: audio-cache.ts  auth-storage.ts  eutherbooks-api.ts  main.ts  media-session.ts  native-audio.ts  playback-session.ts  storage.ts  styles.css  types.ts  version.ts  wake-lock.ts
apps/eutherbooks-player/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/eutherbooks-player/src-tauri/capabilities/: default.json
apps/eutherbooks-player/src-tauri/icons/: icon.icns
apps/eutherbooks-player/src-tauri/src/: lib.rs  main.rs
apps/eutherlist/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/eutherlist/.cargo/: config.toml
apps/eutherlist/src/: main.ts  shoppingMarkdown.ts  styles.css  types.ts
apps/eutherlist/src-tauri/: Cargo.toml  tauri.conf.json
apps/euthersync-android/: settings.gradle
apps/euthersync-android/app/: build.gradle.kts
assets/eutherdogs/: manifest.toml
config/: eutherdogs.example.toml
crates/euthercivet-game/: .gitignore  ART_DIRECTION.md  Cargo.toml  README.md
crates/euthercivet-game/src/: actions.rs  audio.rs  localization.rs  main.rs  model.rs  simulation.rs  ui.rs  visuals.rs
crates/eutherdogs-core/: Cargo.toml
crates/eutherdogs-core/src/: assets.rs  collision.rs  command.rs  config.rs  direction.rs  entity.rs  game.rs  highscore.rs  lib.rs  mobile.rs  player.rs  (+3 more)
crates/eutherdoom-server/: Cargo.toml  README.md
crates/jgenesis-common/: Cargo.toml
crates/z80-emu/: Cargo.toml
deploy/: Caddyfile.example  euther-srv-clean.service  euther-srv-clean.timer  eutherhost-eutherid-request.conf  eutherhost-users-backup-health.service  eutherhost-users-backup-health.timer  eutherhost-users-backup.service  eutherhost-users-backup.timer  eutherhost-users-mirror-alert.service  eutherhost-users-mirror-health.service  eutherhost-users-mirror-health.timer  eutherhost-users-mirror.service  eutherhost-users-mirror.timer  eutherhost.service.example  euthersync.service.example
docs/: DOOM_SERVER_PLAN.md  EUTHERALERT_OPENRA_PLAN.md  EUTHERDOGS_ASSETS.md  EUTHERDOGS_CONFIG.md  EUTHERDOGS_VISUAL_REFERENCE.md  EUTHERDUKE_PLAN.md  EUTHERHOST_USERS_BACKUP.md  JOX_CONTAINER_REFACTOR.md  JOX_TROPHY_SHOP_NEXT_STEPS.md  eutherid-proxy.md  plan.md
scripts/: android-release-apks.sh  build-all.sh  build-euthercivet-web.sh  build-release.sh  dev-bridge.sh  euther-srv-clean.py  eutheralert-install-openra-adapter.sh  eutheralert-install-ra-content.sh  eutheralert-openra-runtime.sh  eutherbooks-player-release-apk.sh  eutherhost-backup-status.py  eutherhost-users-backup.sh  eutherhost-users-mirror.sh  eutherid-agent-request.py  eutherid_request.py  eutherlist-release-apk.sh  euthersync-release-apk.sh  host-hash-password.sh  host-init-user.sh  host-lan-config.sh  host-public-config.sh  host-server.sh  run-tauri-release.sh  write-build-info.mjs
src/: bus.rs  controller.rs  emulator.rs  euthercivet.rs  eutherdogs.rs  lib.rs  m68k.rs  main.rs  paprium.rs  rom.rs  savestate.rs  svp.rs  vdp.rs  vulkan.rs  z80.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/audio/: jg_ym2612.rs  mod.rs  psg.rs  ym2612.rs
tests/: core.rs
tools/eutheralert-openra-adapter/: README.md  jsonl_probe.py
webview/: build-info.ts  main.ts  server-map.ts  shaders.toml  styles.css
(+36 files in other folders)
