[package]
name = "euther_oxide"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Fast headless Rust Mega Drive emulator core inspired by EutherDrive and EutherMaster"

[lib]
name = "euther_oxide"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "euther-oxide"
path = "src/main.rs"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
