[package]
name = "euther_oxide"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Fast headless Rust Mega Drive emulator core inspired by EutherDrive and EutherMaster"

[lib]
name = "euther_oxide"
path = "src/lib.rs"

[dependencies]
bytemuck = { version = "1.25", optional = true }
pollster = { version = "0.4", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
bincode = "2.0.1"
z80-emu = { path = "/home/nichlas/jgenesis/cpu/z80-emu", features = ["bincode"] }
wgpu = { version = "24.0", optional = true }
winit = { version = "0.30", optional = true }

[features]
vulkan = ["dep:bytemuck", "dep:pollster", "dep:wgpu", "dep:winit"]

[[bin]]
name = "euther-oxide"
path = "src/main.rs"

[[bin]]
name = "euther-oxide-vulkan"
path = "src/vulkan.rs"
required-features = ["vulkan"]

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
