[package]
name = "euther_oxide_app"
version = "0.1.0"
edition = "2024"
build = "build.rs"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
euther_oxide = { path = ".." }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }

