[package]
name = "euther_oxide_app"
version = "0.1.0"
edition = "2024"
build = "build.rs"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
euther_oxide = { path = ".." }
cairo-rs = "0.18"
cpal = "0.15"
gdk = "0.18"
gtk = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
webkit2gtk = "2"
