[package]
name = "eutherbooks_player_app"
version = "0.1.0"
edition = "2024"
build = "build.rs"
publish = false

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
